# jbigkit-shared-cmake

./: .gitignore  AUTHORS  CMakeLists.txt  README  jbigkit-config.cmake.in
